test/valid/58215_funWithFunArg/funWithFunArg.agu
-- Author: 58215, Manuel Lourenço

let fun (a): Unit -> Int =
    4

let fun2 (a) : Unit -> Unit =
    print(2)

let main : Unit =
    print(fun(fun2(unit)))