test/invalid-syntax/58215_unitInt/unitInt.agu
-- Author: 58215, Manuel Lourenço

let main : Unit =
    let a : Unit = 648abc